# motor_control_system

./: CMakeLists.txt  README.md  adc_plugin.c  adc_plugin.h  central_nexus.c  central_nexus.h  config.h  encoder_plugin.c  encoder_plugin.h  foc_plugin.c  foc_plugin.h  hal_adc.c  hal_adc.h  hal_gpio.c  hal_gpio.h  hal_pwm.c  hal_pwm.h  main.c  plugin_interface.c  plugin_interface.h  pwm_plugin.c  pwm_plugin.h  sin_table.c  sin_table.h
